# LangGraph-Courses

./: .gitignore  chains.py  main.py  react.py  requirements.txt
Boiler Plate/: ingestion.py  main.py  pyproject.toml
Boiler Plate/.chroma/: chroma.sqlite3
Boiler Plate/graph/: graph.py
Boiler Plate/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
Boiler Plate/graph/chains/tests/: test_chains.py
Boiler Plate/graph/nodes/: web_search.py
LangGraph & Reflection agent/: nodes.py  pyproject.toml  requirements.txt
Reflexion Agent/: chains.py  chains_schemas.py  main.py  pyproject.toml  tool_executor.py
