[project]
name = "boiler-plate"
version = "0.1.0"
description = ""
authors = [
    {name = "rakesh-612",email = "rakesh61295@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "langchain>=1.3.10,<2.0.0",
    "langgraph (>=1.2.6,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-community>=0.4.2,<0.5.0",
    "tavily-python (>=0.7.26,<0.8.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "langchain-chroma>=1.1.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
