[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "rakesh-612",email = "rakesh61295@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph-prebuilt>=1.1.0",
    "python-dotenv>=1.2.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
